--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Saqib Sarwar</title>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			margin: 0;
+			padding: 0;
+		}
+		.header {
+			background-color: #333;
+			color: white;
+			padding: 20px;
+			text-align: center;
+		}
+		.header h1 {
+			margin: 0;
+			font-size: 36px;
+		}
+		.main {
+			display: flex;
+			flex-wrap: wrap;
+			margin: 20px;
+		}
+		.section {
+			flex: 1 1 400px;
+			margin: 10px;
+			padding: 10px;
+			background-color: #f5f5f5;
+		}
+		.section h2 {
+			margin-top: 0;
+			font-size: 24px;
+		}
+		.section p {
+			margin-bottom: 0;
+		}
+	</style>
+</head>
+<body>
+	<header class="header">
+		<h1>Saqib Sarwar</h1>
+	</header>
+	<main class="main">
+		<section class="section">
+			<h2>Education</h2>
+			<p><strong>Ph.D. in CSE, IIT Kanpur, 2022-Present</strong></p>
+			<p>Master of Technology in CSE, Aligarh Muslim University, 2019-2021</p>
+			<p>Bachelor of Technology in CSE, Aligarh Muslim University, 2013-2017</p>
+		</section>
+		<section class="section">
+			<h2>Research Interests</h2>
+			<p>[List of research interests]</p>
+		</section>
+		<section class="section">
+			<h2>Publications</h2>
+			<p>[List of publications]</p>
+		</section>
+		<section class="section">
+			<h2>Conference Presentations</h2>
+			<p>[List of conference presentations]</p>
+		</section>
+		<section class="section">
+			<h2>Teaching Experience</h2>
+			<p>[List of teaching experience]</p>
+		</section>
+		<section class="section">
+			<h2>Professional Experience</h2>
+			<p>[List of professional experience]</p>
+		</section>
+		<section class="section">
+			<h2>Awards and Honors</h2>
+			<p>[List of awards and honors]</p>
+		</section>
+	</main>
+</body>
+</html>
