--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <a href="https://www.linkedin.com/in/saqib-sarwar-3b26a5222">LinkedIn</a>
               </p>
             </td>
-            <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/saqib.jpeg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/saqib.jpeg" class="hoverZoomLink"></a>
+            <td style="padding:2.5%;width:30%;max-width:30%">
+              <a href="images/saqib.jpeg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/saqib_rounded.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
