--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
-              <a href="images/saqib.jpeg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/saqib_rounded.png" class="hoverZoomLink"></a>
+              <a href="images/saqib_sulaiman_blur-modified.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/saqib_sulaiman_blur-modified.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
