--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="2">
           <tbody><tr><td><br><p align="right"><font size="1.5">
-          Modified version of template from <a href="http://www.cs.berkeley.edu/~barron/">this</a> and <a href="https://soubanerjee.github.io/">this</a>.
+          Thanks to <a href="http://www.cs.berkeley.edu/~barron/">this</a> and <a href="https://soubanerjee.github.io/">this</a> for the template. 
           </font></p></td></tr>
       </tbody></table>
 
