--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             
             <ul>
                 <li> I have been selected for the fellowship under Visvesvaraya PhD Scheme for Electronics & IT. (2023)</li>
-                <li> I have qualified UGC NET JRF (Score 196/300) in Computer Science. (2022)</li>
+                <li> I have qualified UGC NET JRF (Score 196) in Computer Science. (2022)</li>
 
               <!--a href="javascript:toggleblock(&#39;news&#39;)">---- show more ----</a-->
 
