--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               </p>
 
               <p>
-                I am a doctoral student with <a href="https://www.cse.iitk.ac.in/users/piyush/">Prof. Piyush Rai</a> in <a href="https://www.cse.iitk.ac.in/">Dept. Of Computer Science & Engineering</a> at <a href="https://www.iitk.ac.in/">IIT Kanpur</a>. I work in the area of general machine learning, deep learning, computer vision and natural language processing. I am a recipient of the prestigious <a href="https://phd.dic.gov.in/">Visvesvaraya PhD Fellowship.</a>
+                I am a doctoral student with <a href="https://www.cse.iitk.ac.in/users/piyush/">Prof. Piyush Rai</a> in <a href="https://www.cse.iitk.ac.in/">Dept. Of Computer Science & Engineering</a> at <a href="https://www.iitk.ac.in/">IIT Kanpur</a>. I work in the area of general machine learning, deep learning, computer vision and natural language processing.
               </p>
 
               <p>
@@ -69,8 +69,9 @@
             <!--sectionheading>&nbsp;&nbsp;News</sectionheading-->
             
             <ul>
-                <li> I have been selected for the fellowship under Visvesvaraya PhD Scheme for Electronics & IT. (2023)</li>
-                <li> I have qualified UGC NET JRF (Score 196) in Computer Science. (2022)</li>
+                <li> I am grateful to be selected for the prestigious <a href="https://phd.dic.gov.in/">Visvesvaraya PhD Fellowship.</a> (2023)</li>
+                <!-- <li> I am a recipient of the prestigious <a href="https://phd.dic.gov.in/">Visvesvaraya PhD Fellowship.</a>
+                  I have qualified UGC NET JRF (Score 196) in Computer Science. (2022)</li> -->
 
               <!--a href="javascript:toggleblock(&#39;news&#39;)">---- show more ----</a-->
 
