--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             
             <ul>
                 <li> I am grateful to be selected for the prestigious <a href="https://phd.dic.gov.in/">Visvesvaraya PhD Fellowship.</a> (2023)</li>
-                <!-- <li> I am a recipient of the prestigious <a href="https://phd.dic.gov.in/">Visvesvaraya PhD Fellowship.</a>
-                  I have qualified UGC NET JRF (Score 196) in Computer Science. (2022)</li> -->
+                <li> I qualified UGC NET JRF in Computer Science. (2022)</li>
+                <!-- <li> I am a recipient of the prestigious <a href="https://phd.dic.gov.in/">Visvesvaraya PhD Fellowship.</a> -->
 
               <!--a href="javascript:toggleblock(&#39;news&#39;)">---- show more ----</a-->
 
