random quote added

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <name><!--heading-->Saqib Sarwar<!--/heading--></name>
               </p>
 
-              <p style="text-align:center">
-                <email align="center"> "Indeed, with hardship comes ease." </email>
+              <p type="text" id="quotation" style="text-align:center">
+                <script src="scripts/quotations.js"></script>
               </p>
 
               <p>
