--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
               </p>
 
               <p>
-                I am a doctoral student with <a href="https://www.cse.iitk.ac.in/users/piyush/">Prof. Piyush Rai</a> in <a href="https://www.cse.iitk.ac.in/">Dept. Of Computer Science & Engineering</a> at <a href="https://www.iitk.ac.in/">IIT Kanpur</a>. I work in the area of general machine learning, deep learning, computer vision and natural language processing.
+                I am a doctoral student with <a href="https://www.cse.iitk.ac.in/users/piyush/">Prof. Piyush Rai</a> in 
+                <a href="https://www.cse.iitk.ac.in/">Dept. Of Computer Science & Engineering</a> at 
+                <a href="https://www.iitk.ac.in/">IIT Kanpur</a>. I work in the area of probabilistic machine learning and its applications in computer vision and natural language processing.
               </p>
 
               <p>
