New paper added

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <!--sectionheading>&nbsp;&nbsp;News</sectionheading-->
             
             <ul>
+                <li> <mark>  New </mark> I successfully organized a ML-based <a href="https://www.kaggle.com/competitions/who-is-the-real-winner">Kaggle Competition</a> as part of CS253 Python Assignment. (2024)</li>
                 <li> I am grateful to be selected for the prestigious <a href="https://phd.dic.gov.in/">Visvesvaraya PhD Fellowship.</a> (2023)</li>
                 <li> I qualified UGC NET JRF in Computer Science. (2022)</li>
                 <!-- <li> I am a recipient of the prestigious <a href="https://phd.dic.gov.in/">Visvesvaraya PhD Fellowship.</a> -->
@@ -155,6 +156,29 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src='images/ctgan_heat_adult_small.png'>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://thesai.org/Downloads/Volume15No4/Paper_125-Rigorous_Experimental_Analysis_of_Tabular_Data_Generated.pdf">
+                <papertitle>Rigorous Experimental Analysis of Tabular Data Generated using TVAE and CTGAN</papertitle>
+              </a>
+              <br>
+              <a href="https://scholar.google.com/citations?user=m8bMi7wAAAAJ&hl=en">Parul Yadav</a>,
+              <a href="https://orcid.org/0000-0002-4161-2789">Manish Gaur</a>, 
+              Rahul Kumar Madhukar, Gaurav Verma, Pankaj Kumar, Nishat Fatima, 
+              <strong>Saqib Sarwar</strong>, Yash Raj Dwivedi
+              <br>
+              <em>IJACSA</em>, 2024
+              <br>
+              <!-- <a href="data/tgan.bib">bibtex</a> -->
+              <p></p>
+              <!-- <p>The monocular depth estimates produced by fully convolutional networks can be used to inform intrinsic image estimation.</p> -->
+            </td>
+          </tr>  
+
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
               <img src='images/seasonal.png'>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
@@ -171,7 +195,7 @@
               <br>
               <em>Water</em>, 2023
               <br>
-              <a href="data/effluent.bib">bibtex</a>
+              <!-- <a href="data/effluent.bib">bibtex</a> -->
               <p></p>
               <!-- <p>The monocular depth estimates produced by fully convolutional networks can be used to inform intrinsic image estimation.</p> -->
             </td>
@@ -195,12 +219,13 @@
               <br>
               <em>Applied Sciences</em>, 2023
               <br>
-              <a href="data/tgan.bib">bibtex</a>
+              <!-- <a href="data/tgan.bib">bibtex</a> -->
               <p></p>
               <!-- <p>The monocular depth estimates produced by fully convolutional networks can be used to inform intrinsic image estimation.</p> -->
             </td>
           </tr>  
 
+          
         <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
