--- a/index.html
+++ b/index.html
@@ -25,14 +25,18 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
+
               <p style="text-align:center">
                 <name><!--heading-->Saqib Sarwar<!--/heading--></name>
               </p>
 
-              <p type="text" id="quotation" style="text-align:center">
-                <script src="scripts/quotations.js"></script>
+              <p style="text-align:center; font-size: small; font-weight: lighter; color: #555; opacity: 0.75; margin-bottom: 5px;">
+                Quote of the Day
               </p>
-
+              <p id="quotation" style="margin-top: 5px;">
+                
+              </p>
+              <script src="scripts/quotations.js"></script>
               <p>
                 I am a doctoral student with <a href="https://www.cse.iitk.ac.in/users/piyush/">Prof. Piyush Rai</a> in 
                 <a href="https://www.cse.iitk.ac.in/">Dept. Of Computer Science & Engineering</a> at 
@@ -72,7 +76,9 @@
             
             <ul>
               <!-- <li> <mark>  New </mark> Our latest work on <a href="https://www.kaggle.com/t/ce34b3ac7e2e43ed82e56597750fcda2">Kaggle Competition</a> as part of CS253 Python Assignment. (2024)</li> -->
-                <li> <mark>  New </mark>Our work '<a href="https://opt-ml.org/papers/2024/paper125.pdf">Simple and Scalable Federated Learning with Uncertainty via Improved Variational Online Newton</a> has been accepted at <a href="https://opt-ml.org/" >NeurIPS 2024 Workshop: Optimization for Machine Learning</a></li>              
+                <li> <mark style="padding: 2px 2px; margin-right: 5px;">  New </mark>Our work '<a href="https://opt-ml.org/papers/2024/paper125.pdf">
+                  Simple and Scalable Federated Learning with Uncertainty via Improved Variational Online Newton</a> 
+                  has been accepted at <a href="https://opt-ml.org/" >NeurIPS 2024 Workshop: Optimization for Machine Learning</a></li>              
                 <li> I successfully organized a ML-based <a href="https://www.kaggle.com/t/ce34b3ac7e2e43ed82e56597750fcda2">Kaggle Competition</a> as part of CS253 Python Assignment. (2024)</li>
                 <li> I am grateful to be selected for the prestigious <a href="https://phd.dic.gov.in/">Visvesvaraya PhD Fellowship.</a> (2023)</li>
                 <li> I qualified UGC NET JRF in Computer Science. (2022)</li>
