--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
 
-              <!-- <p>
-                My current research aims to enable lifelong learning in the deep neural networks while trained incrementally with the sequentially coming data possibly from an unbounded stream with the following constraints: (i) the neural network can have access to the current data only, and access to the previously observed data is forbidden, and (ii) the model should be able to adapt to the changes in the data distribution without suffering from catastrophic forgetting. The following publication reflects my current research interest. Please check my <a href="https://scholar.google.com/citations?user=p7BoMpMAAAAJ&hl=en">Google Scholar</a> page for the full list.
-              </p> -->
+              <p>
+                This section coming sooooon!
+              </p>
 
               <!-- The following is a list of publications that best reflect my current research interests. Please check my Google scholar page for the full list. -->
 
@@ -160,7 +160,7 @@
 
           <!-- StarttPaper one -->
 
-          <tr>
+          <!-- <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src='images/ctgan_heat_adult_small.png'>
             </td>
@@ -176,14 +176,13 @@
               <br>
               <em>IJACSA</em>, 2024
               <br>
-              <!-- <a href="data/tgan.bib">bibtex</a> -->
+              # <a href="data/tgan.bib">bibtex</a> 
               <p></p>
-              <!-- <p>The monocular depth estimates produced by fully convolutional networks can be used to inform intrinsic image estimation.</p> -->
             </td>
-          </tr>  
+          </tr>   -->
 
 
-          <tr>
+          <!-- <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src='images/seasonal.png'>
             </td>
@@ -197,19 +196,16 @@
               Nishat Fatima, 
               <strong>Saqib Sarwar</strong>, 
               Aditya Chaudhary, Kumar Saurabh, Brijesh Singh Yadav
-              <!-- <a href="http://imaginarynumber.net/">Evan Shelhamer</a>, <strong>Jonathan T. Barron</strong>, <a href="http://www.eecs.berkeley.edu/%7Etrevor/">Trevor Darrell</a> -->
               <br>
               <em>Water</em>, 2023
               <br>
-              <!-- <a href="data/effluent.bib">bibtex</a> -->
               <p></p>
-              <!-- <p>The monocular depth estimates produced by fully convolutional networks can be used to inform intrinsic image estimation.</p> -->
             </td>
-          </tr>
+          </tr> -->
 
            <!-- End paper  one -->
 
-          <tr>
+          <!-- <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src='images/tgan.png'>
             </td>
@@ -225,11 +221,9 @@
               <br>
               <em>Applied Sciences</em>, 2023
               <br>
-              <!-- <a href="data/tgan.bib">bibtex</a> -->
               <p></p>
-              <!-- <p>The monocular depth estimates produced by fully convolutional networks can be used to inform intrinsic image estimation.</p> -->
             </td>
-          </tr>  
+          </tr>   -->
 
           
         <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
