Removed Net-JRF

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   has been accepted at <a href="https://opt-ml.org/" >NeurIPS 2024 Workshop: Optimization for Machine Learning</a></li>              
                 <li> I successfully organized a ML-based <a href="https://www.kaggle.com/t/ce34b3ac7e2e43ed82e56597750fcda2">Kaggle Competition</a> as part of CS253 Python Assignment. (2024)</li>
                 <li> I am grateful to be selected for the prestigious <a href="https://phd.dic.gov.in/">Visvesvaraya PhD Fellowship.</a> (2023)</li>
-                <li> I qualified UGC NET JRF in Computer Science. (2022)</li>
+                <!-- <li> I qualified UGC NET JRF in Computer Science. (2022)</li> -->
                 <!-- <li> I am a recipient of the prestigious <a href="https://phd.dic.gov.in/">Visvesvaraya PhD Fellowship.</a> -->
 
               <!--a href="javascript:toggleblock(&#39;news&#39;)">---- show more ----</a-->
