--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 </head>
 
 <body>
+
+  <!-- Navigation Bar -->
+  <!-- <div class="navbar">
+    <a href="index.html">Home</a>
+    <a href="blog.html">Blog</a>
+    <a href="#research">Research</a>
+    <a href="#contact">Contact</a>
+  </div> -->
   <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     <tr style="padding:0px">
       <td style="padding:0px">
@@ -76,6 +84,7 @@
             
             <ul>
               <!-- <li> <mark>  New </mark> Our latest work on <a href="https://www.kaggle.com/t/ce34b3ac7e2e43ed82e56597750fcda2">Kaggle Competition</a> as part of CS253 Python Assignment. (2024)</li> -->
+                <li> I attended the <b>Amazon Research Week, 2024</b> in Bengaluru, India.</li>
                 <li> <mark style="padding: 2px 2px; margin-right: 5px;">  New </mark>Our work '<a href="https://opt-ml.org/papers/2024/paper125.pdf">
                   Simple and Scalable Federated Learning with Uncertainty via Improved Variational Online Newton</a> 
                   has been accepted at <a href="https://opt-ml.org/" >NeurIPS 2024 Workshop: Optimization for Machine Learning</a></li>              
@@ -257,7 +266,9 @@
           Thanks to <a href="http://www.cs.berkeley.edu/~barron/">this</a> and <a href="https://soubanerjee.github.io/">this</a> for the template. 
           </font></p></td></tr>
       </tbody></table>
-
+      <!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+  <img src="https://hitwebcounter.com/counter/counter.php?page=20385963&style=0007&nbdigits=5&type=ip&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>  
       </td>
     </tr>
   </table>
