Add contact details, blog entry for In-Context Learning, and website counter

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 <body>
 
   <!-- Navigation Bar -->
-  <!-- <div class="navbar">
+  <div class="navbar">
     <a href="index.html">Home</a>
     <a href="blog.html">Blog</a>
     <a href="#research">Research</a>
-    <a href="#contact">Contact</a>
-  </div> -->
+    <a href="#contact-details">Contact</a>
+  </div>
   <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     <tr style="padding:0px">
       <td style="padding:0px">
@@ -148,7 +148,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Research</heading>
+              <heading>Selected Research</heading>
 
               <p>
                 This section coming sooooon!
@@ -269,6 +269,17 @@
       <!-- hitwebcounter Code START -->
 <a href="https://www.hitwebcounter.com" target="_blank">
   <img src="https://hitwebcounter.com/counter/counter.php?page=20385963&style=0007&nbdigits=5&type=ip&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>  
+      </td>
+    </tr>
+    <!-- Contact Details Section -->
+    <tr>
+      <td colspan="2">
+        <hr>
+        <div id="contact-details" style="text-align:center; margin-top:30px;">
+          <heading>Contact</heading>
+          <p>RM 504, CSE Department, IIT Kanpur, Kanpur, UP, India.</p>
+          <p>Email: <a href="mailto:saqib@cse.iitk.ac.in">saqib@cse.iitk.ac.in</a></p>
+        </div>
       </td>
     </tr>
   </table>
