--- a/blog.html
+++ b/blog.html
@@ -10,10 +10,13 @@
 <body>
     <!-- Navigation Bar -->
     <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="blog.html">Blog</a>
-        <a href="#research">Research</a>
-        <a href="#contact">Contact</a>
+        <div class="nav-left">
+            <a href="index.html">Home</a>
+        </div>
+        <div class="nav-right">
+            <a href="blog.html">Blog</a>
+            <a href="index.html#contact-details">Contact</a>
+        </div>
     </div>
 
     <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;margin:auto;">
@@ -26,7 +29,7 @@
                     <ul>
                         <!-- <li><a href="posts/learning.html">The world of Machine Learning</a> - <i>Feb 13, 2025</i></li> -->
                         <!-- <li><a href="posts/federated-learning.html">Federated Learning: A New Era of Privacy</a> - <i>Jan 25, 2025</i></li> -->
-                        <li><a href="data/SOTA_Literature.pdf" target="_blank">In-Context Learning (SOTA Literature PDF)</a> - <i>Aug 17, 2025</i></li>
+                        <li><a href="data/SOTA_Literature.pdf" target="_blank">In-Context Learning</a> - <i>Aug 17, 2025</i></li>
                         <!-- <li><a href="posts/bayesian-inference.html">Bayesian Inference in Machine Learning</a> - <i>Dec 10, 2024</i></li> -->
                     </ul>
 
