--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
 
   <!-- Navigation Bar -->
   <div class="navbar">
-    <a href="index.html">Home</a>
-    <a href="blog.html">Blog</a>
-    <a href="#research">Research</a>
-    <a href="#contact-details">Contact</a>
+    <div class="nav-left">
+      <a href="index.html">Home</a>
+    </div>
+    <div class="nav-right">
+      <a href="blog.html">Blog</a>
+      <a href="#contact-details">Contact</a>
+    </div>
   </div>
   <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     <tr style="padding:0px">
