Format contact address in 2 lines

--- a/blog.html
+++ b/blog.html
@@ -10,12 +10,14 @@
 <body>
     <!-- Navigation Bar -->
     <div class="navbar">
-        <div class="nav-left">
-            <a href="index.html">Home</a>
-        </div>
-        <div class="nav-right">
-            <a href="blog.html">Blog</a>
-            <a href="index.html#contact-details">Contact</a>
+        <div class="nav-container">
+            <div class="nav-left">
+                <a href="index.html">Home</a>
+            </div>
+            <div class="nav-right">
+                <a href="blog.html">Blog</a>
+                <a href="index.html#contact-details">Contact</a>
+            </div>
         </div>
     </div>
 
