--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
 
   <!-- Navigation Bar -->
   <div class="navbar">
-    <div class="nav-left">
-      <a href="index.html">Home</a>
-    </div>
-    <div class="nav-right">
-      <a href="blog.html">Blog</a>
-      <a href="#contact-details">Contact</a>
+    <div class="nav-container">
+      <div class="nav-left">
+        <a href="index.html">Home</a>
+      </div>
+      <div class="nav-right">
+        <a href="blog.html">Blog</a>
+        <a href="#contact-details">Contact</a>
+      </div>
     </div>
   </div>
   <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -270,17 +272,18 @@
           </font></p></td></tr>
       </tbody></table>
       <!-- hitwebcounter Code START -->
-<a href="https://www.hitwebcounter.com" target="_blank">
+<!-- <a href="https://www.hitwebcounter.com" target="_blank">
   <img src="https://hitwebcounter.com/counter/counter.php?page=20385963&style=0007&nbdigits=5&type=ip&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>  
       </td>
-    </tr>
+    </tr> -->
     <!-- Contact Details Section -->
     <tr>
       <td colspan="2">
         <hr>
         <div id="contact-details" style="text-align:center; margin-top:30px;">
           <heading>Contact</heading>
-          <p>RM 504, CSE Department, IIT Kanpur, Kanpur, UP, India.</p>
+          <p>RM 504, CSE Department, IIT Kanpur<br>
+          Kanpur, UP, India. 226012</p>
           <p>Email: <a href="mailto:saqib@cse.iitk.ac.in">saqib@cse.iitk.ac.in</a></p>
         </div>
       </td>
