--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Blog - Saqib Sarwar</title>
+    <title>Notes - Saqib Sarwar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
@@ -15,7 +15,7 @@
                 <a href="index.html">Home</a>
             </div>
             <div class="nav-right">
-                <a href="blog.html">Blog</a>
+                <a href="blog.html">Notes</a>
                 <a href="index.html#contact-details">Contact</a>
             </div>
         </div>
@@ -25,8 +25,8 @@
         <tbody>
             <tr>
                 <td style="padding:20px;">
-                    <h1>Blog Posts</h1>
-                    <p>Welcome to my blog! Here are some of my latest articles:</p>
+                    <h1>Notes</h1>
+                    <p>Welcome to my notes! Here are some of my latest articles:</p>
 
                     <ul>
                         <!-- <li><a href="posts/learning.html">The world of Machine Learning</a> - <i>Feb 13, 2025</i></li> -->
