--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="index.html">Home</a>
       </div>
       <div class="nav-right">
-        <a href="blog.html">Blog</a>
+        <a href="blog.html">Notes</a>
         <a href="#contact-details">Contact</a>
       </div>
     </div>
