--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
                     <p>Welcome to my notes! Here are some of my latest articles:</p>
 
                     <ul>
-                        <!-- <li><a href="posts/learning.html">The world of Machine Learning</a> - <i>Feb 13, 2025</i></li> -->
+                        <li><a href="posts/learning.html">The world of Machine Learning</a> - <i>Feb 13, 2025</i></li>
                         <!-- <li><a href="posts/federated-learning.html">Federated Learning: A New Era of Privacy</a> - <i>Jan 25, 2025</i></li> -->
                         <li><a href="data/SOTA_Literature.pdf" target="_blank">In-Context Learning</a> - <i>Aug 17, 2025</i></li>
                         <!-- <li><a href="posts/bayesian-inference.html">Bayesian Inference in Machine Learning</a> - <i>Dec 10, 2024</i></li> -->
