--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <heading>Selected Research</heading>
 
               <p>
-                This section coming sooooon!
+                This section coming soon!
               </p>
 
               <!-- The following is a list of publications that best reflect my current research interests. Please check my Google scholar page for the full list. -->
@@ -268,7 +268,7 @@
 
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="2">
           <tbody><tr><td><br><p align="right"><font size="1.5">
-          Thanks to <a href="http://www.cs.berkeley.edu/~barron/">this</a> and <a href="https://soubanerjee.github.io/">this</a> for the template. 
+          Thanks to <a href="http://www.cs.berkeley.edu/~barron/">this</a> for the template. 
           </font></p></td></tr>
       </tbody></table>
       <!-- hitwebcounter Code START -->
