--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
               <p>
                 
-                Prior to joining IIT Kanpur, I worked as a Project Associate II on a <a href="https://dst.gov.in/">DST</a> sponsored project funded by <a href="https://c3ihub.org/">C3iHub.</a> I have completed both my Master's and Bachelor's from <a href="https://amu.ac.in/department/computer-engineering">Dept. Of Computer Engineering</a> at <a href="https://amu.ac.in/">AMU</a>. 
+                Prior to joining IIT Kanpur, I worked as a Project Associate II on a <a href="https://dst.gov.in/">DST</a> sponsored project on "Synthetic Data Generation" funded by <a href="https://c3ihub.org/">C3iHub.</a> I have completed both my Master's and Bachelor's from <a href="https://amu.ac.in/department/computer-engineering">Dept. Of Computer Engineering</a> at <a href="https://amu.ac.in/">AMU</a>. 
               </p>
               
               <p style="text-align:center">
