--- a/index.html
+++ b/index.html
@@ -71,9 +71,14 @@
                 <a href="https://www.linkedin.com/in/saqib-sarwar-3b26a5222">LinkedIn</a>
               </p>
             </td>
+            <!-- <td style="padding:2.5%;width:30%;max-width:30%">
+              <a href="images/saqib.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/saqib.png" class="hoverZoomLink"></a>
+            </td> -->
             <td style="padding:2.5%;width:30%;max-width:30%">
-              <a href="images/saqib_sulaiman_blur-modified.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/saqib_sulaiman_blur-modified.png" class="hoverZoomLink"></a>
-            </td>
+              <a href="images/saqib.png">
+                <img style="width:100%;max-width:100%;border-radius:10px;" alt="profile photo" src="images/saqib.png" class="hoverZoomLink">
+              </a>
+            </td>            
           </tr>
         </tbody></table>
 
