--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             
             <ul>
               <!-- <li> <mark>  New </mark> Our latest work on <a href="https://www.kaggle.com/t/ce34b3ac7e2e43ed82e56597750fcda2">Kaggle Competition</a> as part of CS253 Python Assignment. (2024)</li> -->
-              <li><mark style="padding: 2px 2px; margin-right: 5px;">  New </mark> Organizing Team Member: <b><a href="https://aiml-workshop.cse.iitk.ac.in/index.html">Winter Workshop on ML & AI</a>, IIT Kanpur. [Dec 2025]</b></li>  
+              <li><mark style="padding: 2px 2px; margin-right: 5px;">  New </mark> Volunteer: <b><a href="https://aiml-workshop.cse.iitk.ac.in/index.html">Winter Workshop on ML & AI</a>, IIT Kanpur. [Dec 2025]</b></li>  
               <li> Presented poster for our <a href="https://opt-ml.org/papers/2024/paper125.pdf">research work</a> at the <b>Amazon Research Week</b> in Bengaluru, India. [Nov 2024]</li>
                 <!-- <li> Our work '<a href="https://opt-ml.org/papers/2024/paper125.pdf">
                   Simple and Scalable Federated Learning with Uncertainty via Improved Variational Online Newton</a> 
