Updated TMLR paper

--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
               <img src='images/fedivon-opt.jpg'>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://opt-ml.org/papers/2024/paper125.pdf">
-                <papertitle>Simple and Scalable Federated Learning with Uncertainty via Improved Variational Online Newton</papertitle>
+              <a href="https://openreview.net/pdf?id=TzhCnGBK4F">
+                <papertitle>Federated Learning with Uncertainty and Personalization via Efficient Second-order Optimization</papertitle>
               </a>
               <br>
               <!-- <a href="https://scholar.google.com/citations?user=m8bMi7wAAAAJ&hl=en">Parul Yadav</a>,
@@ -194,7 +194,7 @@
               Shivam Pal, Aishwarya Gupta,
               <strong>Saqib Sarwar</strong>, Piyush Rai
               <br>
-              <em>OPT-ML</em>, 2024
+              <em>TMLR</em>, 2025
               <br>
               <!-- # <a href="data/tgan.bib">bibtex</a>  -->
               <p></p>
